tests/negative/test_mac_many_args.orb
mac foo (a) {
    ret \();
};

fnc main () () {
    foo 1 2;
};